--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -16,7 +16,7 @@
       width: 100%;
     "
   >
-    <h3 class="card-header">Enter your credentials</h3>
+    <h3 class="card-header">ACCOUNT LOGIN</h3>
     <div class="card-body">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="form-group">
