--- a/src/styles.less
+++ b/src/styles.less
@@ -65,6 +65,14 @@ body {
   display: none !important;
 }
 
+.sidebar-link {
+  transition: background-color 0.2s ease;
+  border-radius: 4px;
+}
+
+.sidebar-link:hover {
+  background-color: #dedede; /* light gray */
+}
 
 
 
