--- a/src/app/account_admin/add-edit-account.component.html
+++ b/src/app/account_admin/add-edit-account.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h5 class="mb-0">{{ title }}</h5>
-  <a routerLink="../" class="btn btn-outline-secondary">
+  <button type="button" class="btn btn-outline-secondary" (click)="cancel()">
     <i class="bi bi-arrow-left me-2"></i>Back to List
-  </a>
+  </button>
 </div>
 
 <div *ngIf="loading" class="text-center">
@@ -83,33 +83,6 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <div class="mb-3">
-        <label for="lrn_number" class="form-label">LRN Number</label>
-        <input
-          type="text"
-          id="lrn_number"
-          formControlName="lrn_number"
-          class="form-control"
-        />
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="mb-3">
-        <label for="school_year" class="form-label">School Year</label>
-        <input
-          type="text"
-          id="school_year"
-          formControlName="school_year"
-          class="form-control"
-          placeholder="e.g., 2023-2024"
-        />
-      </div>
-    </div>
-  </div>
-
   <div class="row" *ngIf="!id">
     <div class="col-md-6">
       <div class="mb-3">
@@ -167,6 +140,6 @@
       <span *ngIf="submitting" class="spinner-border spinner-border-sm me-2"></span>
       {{ id ? 'Update' : 'Create' }} Account
     </button>
-    <a routerLink="../" class="btn btn-secondary">Cancel</a>
+    <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
   </div>
 </form>
