adding locking history

--- a/src/app/homeroom/consolidated-sheet/subnav.component.html
+++ b/src/app/homeroom/consolidated-sheet/subnav.component.html
@@ -1,29 +1,21 @@
-<ul class="nav nav-tabs rounded-0 py-4 subnav">
-
-  <!-- FIRST SEMESTER DROPDOWN -->
-  <li class="nav-item dropdown flex-grow-1 text-center">
+<ul class="nav justify-content-end py-3 subnav">
+  <li class="nav-item">
     <a 
-      class="nav-link dropdown-toggle" 
+      class="btn btn-sm btn-outline-primary mx-1 rounded-pill" 
       routerLink="FIRST SEMESTER" 
-      routerLinkActive="active" 
-      id="firstQuarter" 
-      role="button"
+      routerLinkActive="active btn-primary text-white"
     >
-      FIRST SEMESTER
+      First Semester
     </a>
   </li>
 
-  <!-- SECOND QUARTER DROPDOWN -->
-  <li class="nav-item dropdown flex-grow-1 text-center">  
+  <li class="nav-item">
     <a 
-      class="nav-link dropdown-toggle" 
+      class="btn btn-sm btn-outline-primary mx-1 rounded-pill" 
       routerLink="SECOND SEMESTER" 
-      routerLinkActive="active" 
-      id="secondQuarter"
-      role="button"
+      routerLinkActive="active btn-primary text-white"
     >
-      SECOND SEMESTER
+      Second Semester
     </a>
   </li>
 </ul>
-
