--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,6 +66,20 @@
       </div>
     </ng-container>
 
+    <ng-container *ngIf="account.role === 'Principal'">
+
+      <div class="col-md-4">
+        <div class="card shadow-sm border-0 h-100">
+          <div class="card-body text-center">
+            <i class="bi bi-house-door fs-1 text-warning"></i>
+            <h5 class="mt-3">Homeroom</h5>
+            <p class="text-muted">Manage sections and assignments.</p>
+            <a routerLink="/homeroom" class="btn btn-outline-warning btn-sm">Go</a>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
     <!-- SuperAdmin Dashboard -->
     <ng-container *ngIf="account.role === 'SuperAdmin'">
       <div class="col-md-4">
