--- a/src/app/student/egrade.component.html
+++ b/src/app/student/egrade.component.html
@@ -16,9 +16,9 @@
         <th style="width: 10%">Code</th>
         <th style="width: 50%">Subject Name</th>
         <th style="width: 20%">Teacher</th>
-        <th style="width: 10%">1ST</th>
-        <th style="width: 10%">2ND</th>
-        <th style="width: 10%">SFG</th> 
+        <th style="width: 10%">Midterm</th>
+        <th style="width: 10%">Final</th>
+        <th style="width: 10%">Average</th> 
       </tr>   
     </thead>      
     <tbody>     
