--- a/src/app/curriculum_subjects/subject-list.component.html
+++ b/src/app/curriculum_subjects/subject-list.component.html
@@ -23,6 +23,7 @@
         <option value="STEM">STEM</option>
         <option value="HUMMS">HUMMS</option>
         <option value="ABM">ABM</option>
+        <option value="GAS">GAS</option>
       </select>
     </div>
 
