--- a/src/app/homeroom/consolidated-sheet/semestral-consolidated.component.html
+++ b/src/app/homeroom/consolidated-sheet/semestral-consolidated.component.html
@@ -1,42 +1,95 @@
-<div 
-  style="max-width: 1200px; height: 500px; overflow: auto; margin: auto; width: 100%;"
+<div
+  style="
+    max-width: 1200px;
+    height: 500px;
+    overflow: auto;
+    margin: auto;
+    width: 100%;
+  "
 >
-  <table class="table table-hover table-sm text-center" *ngIf="sheet" style="border-collapse: collapse;">
+  <table
+    class="table table-hover table-sm text-center"
+    *ngIf="sheet"
+    style="border-collapse: collapse; min-width: max-content"
+  >
     <thead>
-      <!-- First row: Subject names -->
       <tr>
-        <th  
-            style="position: sticky; left: 0; top: 0; background: #fff; z-index: 3;">
-        </th>
-        <th *ngFor="let subj of sheet.subjects" colspan="3" 
-            style="position: sticky; top: 0; background: #fff; z-index: 2;">
-          {{ subj.subject.name }}
+        <th
+          style="
+            position: sticky;
+            left: 0;
+            top: 0;
+            background: #fff;
+            z-index: 3;
+            min-width: 150px;
+          "
+        ></th>
+        <th
+          *ngFor="let subj of sheet.subjects; let i = index"
+          colspan="3"
+          class="subject-header subject-{{ i % 6 }}"
+          title="{{ subj.subject.name }}"
+        >
+          <span class="subject-name">
+            <span>{{ subj.subject.name }}</span>
+          </span>
         </th>
       </tr>
 
       <!-- Second row: 1ST / 2ND / SFG -->
-      <tr style="position: sticky; left: 0; top: 150px; background: #fff; z-index: 3;">
+      <tr>
         <th
-            >
+          style="
+            position: sticky;
+            left: 0;
+            top: 30px;
+            background: #fff;
+            z-index: 3;
+          "
+        >
           Students
         </th>
-        <ng-container *ngFor="let subj of sheet.subjects">
-          <th style=" background: #fff; z-index: 2;">1ST</th>
-          <th style=" background: #fff; z-index: 2;">2ND</th>
-          <th style=" background: #fff; z-index: 2;">SFG</th>
+        <ng-container *ngFor="let subj of sheet.subjects; let i = index">
+          <th
+            class="subject-col subject-{{ i % 6 }}"
+            style="position: sticky; top: 30px; z-index: 2"
+          >
+            1ST
+          </th>
+          <th
+            class="subject-col subject-{{ i % 6 }}"
+            style="position: sticky; top: 30px; z-index: 2"
+          >
+            2ND
+          </th>
+          <th
+            class="subject-col subject-{{ i % 6 }}"
+            style="position: sticky; top: 30px; z-index: 2"
+          >
+            SFG
+          </th>
         </ng-container>
       </tr>
     </thead>
 
     <tbody>
       <tr *ngFor="let student of sheet.students">
-        <td style="position: sticky; left: 0; background: #fff; z-index: 1;">
+        <td
+          style="
+            position: sticky;
+            left: 0;
+            background: #fff;
+            z-index: 1;
+            min-width: 150px;
+            text-align: left;
+          "
+        >
           {{ student.name }}
         </td>
         <ng-container *ngFor="let subj of sheet.subjects">
-          <td>{{ student.grades[subj.subject.id]?.first ?? ' ' }}</td>
-          <td>{{ student.grades[subj.subject.id]?.second ?? ' ' }}</td>
-          <td>{{ student.grades[subj.subject.id]?.ave ?? ' ' }}</td>
+          <td>{{ student.grades[subj.subject.id]?.first ?? " " }}</td>
+          <td>{{ student.grades[subj.subject.id]?.second ?? " " }}</td>
+          <td>{{ student.grades[subj.subject.id]?.ave ?? " " }}</td>
         </ng-container>
       </tr>
     </tbody>
